Blender 3.0 Crash when Cycles rendering GPU+CPU #91994

Closed
opened 2021-10-06 23:29:06 +02:00 by Vas · 11 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-05 22:29, hash: 26dac33ce1
Worked: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-04 20:40, hash: 18959c502d

Short description of error
On this build, using GPU+CPU with Cycles render crashes Blender
Using each one of them separately causes no issues
Video demo below
2021-10-06 22-22-23.mp4

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]

  • Default file
  • go to Edit>Preferences>System and enable both CPU and GPU
  • Set render engine to Cycles
  • Set Device to GPU compute
  • Press F12 to render
  • Crash
**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-05 22:29, hash: `26dac33ce1` Worked: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-04 20:40, hash: `18959c502d` **Short description of error** On this build, using GPU+CPU with Cycles render crashes Blender Using each one of them separately causes no issues Video demo below [2021-10-06 22-22-23.mp4](https://archive.blender.org/developer/F10823459/2021-10-06_22-22-23.mp4) **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] - Default file - go to Edit>Preferences>System and enable both CPU and GPU - Set render engine to Cycles - Set Device to GPU compute - Press F12 to render - Crash
Author

Added subscriber: @Alumx

Added subscriber: @Alumx

Added subscriber: @Nico-Traber

Added subscriber: @Nico-Traber

I can confirm this. I have experienced the same thing.

Info Log:

Illegal address in CUDA queue synchronize (film_convert_combined_half_rgba)
I can confirm this. I have experienced the same thing. Info Log: ``` Illegal address in CUDA queue synchronize (film_convert_combined_half_rgba) ```
Sergey Sharybin self-assigned this 2021-10-07 10:16:16 +02:00
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

@Sergey I think the problem is that window_height is not updated in foreach_sliced_buffer_params which then corresponds to the full height and not the height assigned to each device, so the kernels over-reads due to larger work_size = window_width * window_height in run_film_convert_kernels and possibly other places. So likely caused by D12599.

@Sergey I think the problem is that `window_height` is not updated in `foreach_sliced_buffer_params` which then corresponds to the full height and not the height assigned to each device, so the kernels over-reads due to larger `work_size = window_width * window_height` in `run_film_convert_kernels` and possibly other places. So likely caused by [D12599](https://archive.blender.org/developer/D12599).

Indeed your findings are correct. I am working on a fix already.

Indeed your findings are correct. I am working on a fix already.

This issue was referenced by blender/cycles@b36768b668

This issue was referenced by blender/cycles@b36768b668d02cd79b7c4b0c9be29fc769923962

This issue was referenced by 123255be6b

This issue was referenced by 123255be6b109963bc00fe5b3ea434ecedbde231

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'

This issue was referenced by blender/cycles@f137415641

This issue was referenced by blender/cycles@f1374156416b0cb153b557ba4986629e6d717c71

This issue was referenced by 0d4c53ecfe

This issue was referenced by 0d4c53ecfebb49a8c4e00f984756e0d243968abe
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91994
No description provided.