Fix T91994: Cycles crash when rendering on multiple devices

The overscan change from D12599 lacked proper handling of window
when slicing buffer for multiple devices.